remove spectrum profile from Device Xtras

--- a/opsettings/res/values/bools.xml
+++ b/opsettings/res/values/bools.xml
@@ -16,7 +16,7 @@
 -->
 <resources>
 
-    <!-- Whether to display spectrum settings -->
-    <bool name="device_supports_spectrum">false</bool>
+    <!-- Whether to display spectrum settings 
+    <bool name="device_supports_spectrum">false</bool>-->
 
 </resources>
