--- a/opsettings/res/values/arrays.xml
+++ b/opsettings/res/values/arrays.xml
@@ -16,7 +16,7 @@
 -->
 <resources>
 
-    <!-- Spectrum profiles -->
+    <!-- Spectrum profiles 
     <string-array name="spectrum_profiles">
         <item>@string/spectrum_profile_battery</item>
         <item>@string/spectrum_profile_balanced</item>
@@ -29,7 +29,7 @@
         <item>0</item>
         <item>1</item>
         <item>3</item>
-    </string-array>
+    </string-array>-->
 
     <!-- Alert slider -->
     <string-array name="notification_slider_usage_entries" translatable="false">
